@@ -1,3 +1,12 @@
+2019-09-03  dyuret  <dyuret@login02.kuacc.ku.edu.tr>
+
+	* cuarrays: failing on gitlab-ci sometimes, related to gpu type?
+	Tesla K20m sm_35 *bio*  CUDAnative ...
+	Tesla K80  sm_37 *sgpu* CUDAnative ...
+	Tesla P4   sm_61 *knet* CUDAnative CuArrays
+	Quadro M2000 sm_52 *knet* ...
+	Tesla V100-PCIE-32GB sm_70 *v100* CUDAnative ...
+
 2018-09-18  Deniz Yuret  <dyuret@ku.edu.tr>
 
 	* gc: The current gc has three problems:
